nova (2011.2~bzr828-0ubuntu2) UNRELEASED; urgency=low

  * Make the build fail if the test suite does. The test that used to
    fail on the buildd's has been complete rewritten. (LP: #712481)
  * Specify that we need Sphinx > 1.0 to build.

 -- Soren Hansen <soren@ubuntu.com>  Mon, 21 Mar 2011 12:16:02 +0100

nova (2011.2~bzr828-0ubuntu1) natty; urgency=low

  * New upstream version. 
  * debian/control: Add python-lockfile as a build dependency.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 18 Mar 2011 09:28:17 -0400

nova (2011.2~bzr786-0ubuntu1) natty; urgency=low

  [Chuck Short]
  * New upstream version.

  [ Thierry Carrez (ttx) ]
  * nova-api.conf was renamed api-paste.ini (LP: #705453)

  [ Soren Hansen ]
  * Start on filesystem event rather than local-filesystems.
  * Weed out a *lot* of out-dated information from debian/control.
  * Create /var/lock/nova in upstart jobs and set lock_path in the
    flagfile.
  * Add dependency on python-novaclient.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 11 Mar 2011 09:41:45 -0500

nova (2011.2~bzr760-0ubuntu1) natty; urgency=low

  [Chuck Short]
  * New upstream version.
  * Fix up typos in debian/control. (LP: #721414)

  [ Thierry Carrez (ttx) ]
  * Add python-distutils-extra as build-dep (for i18n)
  * Ship .mo files in /usr/share/locale
  * Add lvdisplay to nova_sudoers, clean up dupe entries

  [ Soren Hansen ]
  * Always run "nova-manage db sync" from postinst, unless an explicit
    sql_connection has been set in nova.conf. (LP: #705758)

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 04 Mar 2011 10:19:52 -0500

nova (2011.2~bzr700-0ubuntu1) natty; urgency=low

  [ Chuck Short ]
  * New upstream version.

  [ Soren Hansen ]
  * Rely on --logdir to find and use the correct logfile.
  * Remove the postrotate magic for all but nova-objectstore. It is not
    needed anymore due to using RotatingFileHandler for logging.

  [ Thierry Carrez ]
  * Ship adminclient in a separate package.
